prow/asm/user-auth/pkg/httpbin_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
  namespace: userauth-test
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: httpbin-tls-cert
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: userauth-test
spec:
  gateways:
    - httpbin-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /ip
      name: ip-route
      route:
        - destination:
            host: httpbin.userauth-test.svc.cluster.local
            port:
              number: 8000
    - match:
        - uri:
            prefix: /status
        - uri:
            prefix: /_gcp_anthos_callback
        - uri:
            prefix: /headers
      name: user-auth-route
      route:
        - destination:
            host: httpbin.userauth-test.svc.cluster.local
            port:
              number: 8000
